examples/test/testpolicy12177.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12177
  namespace: namespace168
spec:
  podSelector:
    matchLabels:
      key18: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value10
      podSelector:
        matchLabels:
          key49: value39
          key25: value18
          key27: value17
